--- a/PickTimeOutCompany/PickTimeOutCompany.csproj
+++ b/PickTimeOutCompany/PickTimeOutCompany.csproj
@@ -175,6 +175,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Logo\图标.jpeg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
